[package]
name = "steppe"
version = "0.2.1"
edition = "2024"
license-file = "LICENSE"
description = "Follow the progress of a task easily"
repository = "https://github.com/irevoire/steppe"
authors = ["Tamo <tamo@meilisearch.com>"]

[dependencies]
convert_case = "0.8.0"
indexmap = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
utoipa = { version = "5.4.0", optional = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json"] }
serde_json = "1.0.140"

[features]
utoipa = ["dep:utoipa"]
