[package]
name = "steppe"
version = "0.4.0"
edition = "2024"
license-file = "LICENSE"
description = "Follow the progress of a task easily"
documentation = "https://docs.rs/steppe"
repository = "https://github.com/irevoire/steppe"
authors = ["Tamo <tamo@meilisearch.com>"]

[dependencies]
convert_case = "0.8.0"
indexmap = { version = "2.10.0", features = ["serde"] }

# Default progress for binaries
jiff = { version = "0.2.15", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }
colored_json = { version = "5.0.0", optional = true }

# utoipa
utoipa = { version = "5.4.0", optional = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json", "redactions"] }
serde_json = "1.0.140"

[features]
default = ["default-progress"]
utoipa = ["dep:utoipa"]
default-progress = ["serde", "serde_json", "jiff", "colored_json"]
